[package]
name = "ln-manager"
version = "0.0.1"
authors = ["Matt Corallo <git@bluematt.me>"]
build = "build.rs"
edition = "2018"

[dependencies]
bitcoin = "0.18"
bitcoin-bech32 = "0.7"
bitcoin_hashes = "0.3"
lightning = { git = "https://github.com/rust-bitcoin/rust-lightning.git", rev = "02feaeb" }
# lightning = { path = "../../bitcoin/rust-lightning/" }
lightning-invoice = { git = "https://github.com/knarfytrebil/rust-lightning-invoice.git", branch = "master" }
secp256k1 = "0.12"
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "master" }
tokio-io = { git = "https://github.com/tokio-rs/tokio.git" }
tokio-fs = { git = "https://github.com/tokio-rs/tokio.git" }
tokio-codec = { git = "https://github.com/tokio-rs/tokio.git" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio.git" }
futures-timer = { git = "https://github.com/rustasync/futures-timer.git" }
futures = { package = "futures-preview", version = "0.3.0-alpha.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.4"
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
tokio-tcp = { git = "https://github.com/tokio-rs/tokio.git" }
bytes = "0.4"
base64 = "0.9"
num-derive = "0.2"
num-traits = "0.2"
config = "0.9.2"
log = "0.4"
runtime = "0.3.0-alpha.6"
runtime-tokio = "0.3.0-alpha.5"
failure = "0.1.5"

[build-dependencies]
cc = "1.0"
