[package]
name = "rustbolt"
version = "0.0.1"
authors = ["Matt Corallo <git@bluematt.me>"]
build = "build.rs"
edition = "2018"

[dependencies]
bitcoin = "0.18"
bitcoin-bech32 = "0.7"
bitcoin_hashes = "0.3"
lightning = "0.0.9"
# lightning = { path = "../../bitcoin/rust-lightning/" } 
lightning-net-tokio = "0.0.1"
lightning-invoice = { git = "https://github.com/rust-bitcoin/rust-lightning-invoice.git", branch = "master" }
secp256k1 = "0.12"
hyper = "0.12"
futures = { package = "futures-preview", version = "0.3.0-alpha.17", features = ["compat"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
rand = "0.4"
bytes = "0.4"
base64 = "0.9"
num-derive = "0.2"
num-traits = "0.2"
config = "0.9.2"
log = "0.4"
simplelog = "^0.6.0"
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
ln-manager = { path = "../ln-manager" }
protocol = { path = "../protocol" }
failure = "0.1.5"

[build-dependencies]
cc = "1.0"
